# HangManGame

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  config.example.toml  config.toml  pyproject.toml
files/: words.txt
src/hangman/: config.py
src/hangman/adapters/: repo.py  word_provider.py
src/hangman/adapters/cli/: console.py  controller.py  view.py  views_error.py
src/hangman/application/: dto.py  interactors.py
src/hangman/application/interfaces/: letter_validator.py  repo.py  word_provider.py
src/hangman/domain/: entity.py  exception.py  exceptions.py
src/hangman/infrastructure/: letter_validator.py  repo.py  word_provider.py
src/hangman/infrastructure/database/: repo.py
src/hangman/infrastructure/database/migrations/: create_hangman_table.py
src/hangman/main/: bot.py  cli_app.py
src/hangman/main/bot/: app.py  ioc.py
src/hangman/presentation/: cli_game.py
src/hangman/presentation/bot/: handlers.py  states.py
src/hangman/presentation/cli/: console.py  controller.py  game.py  view.py  views_error.py
src/hangman/presentation/common/: presenters.py  views_error.py
src/hangman/presentation/core/: localizations.py
systemd/: hangman_bot.service
tests/: conftest.py
tests/integration/: test_sqlite_repo.py
tests/unit/: test_domain.py
