[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hangman"
version = "0.1.0"
authors = [
    {name = "Ageev Maxim", email = "maksim170901@gmail.com"},
]
description = "Hangman game project"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
hangman-cli = "hangman.main.cli_app:main"

[project.optional-dependencies]
bot = [
    "pyTelegramBotAPI==4.22.1",
    "dishka==1.3.0"
]
test = [
    "pytest==8.3.2",
]
