[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hangman"
version = "0.1.0"
authors = [
    {name = "Ageev Maxim", email = "maksim170901@gmail.com"},
]
description = "Hangman game project"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
hangman-cli = "hangman.main.cli_app:main"
hangman-bot = "hangman.main.bot.app:main"
hangman-migrations-up = "hangman.infrastructure.database.migrations.create_hangman_table:up"
hangman-migrations-down = "hangman.infrastructure.database.migrations.create_hangman_table:down"

[project.optional-dependencies]
bot = [
    "pyTelegramBotAPI==4.22.1",
    "dishka==1.3.0"
]
test = [
    "pytest==8.3.2",
    "pytest-repeat==0.9.3"
]
dev = [
    "mypy==1.11.2",
    "ruff==0.6.3",
]

[tool.mypy]
strict = true
warn_unreachable = true
show_column_numbers = true
show_error_context = true
check_untyped_defs = true
ignore_missing_imports = true
disallow_subclassing_any = false

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "TRY002",
  "RUF001",
  "D",
  "S",
  "ANN",
  "TRY003",
  "EM",
  "RSE102",
  "RET504",
  "ISC001",
  "COM812"
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

"test_*" = ["S101", "PLR2004", "PT023", "PT001", "PT006"]
"conftest.py" = ["PT023", "PT001", "PT006"]
"views_error.py" = ["W293"]
"view.py" = ["T201"]
